
syntax = "proto3";
// system_mail_template 邮件模版表
package mail;
option go_package = "./mail";
import "google/protobuf/timestamp.proto";

// SystemMailTemplateObject 数据对象
message SystemMailTemplateObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: db:"name" json:"name"
	optional string name = 2; //模板名称
	// @inject_tag: db:"code" json:"code"
	optional string code = 3; //模板编码
	// @inject_tag: db:"account_id" json:"accountId"
	optional int64 account_id = 4; //发送的邮箱账号编号
	// @inject_tag: db:"nickname" json:"nickname"
	optional string nickname = 5; //发送人名称
	// @inject_tag: db:"title" json:"title"
	optional string title = 6; //模板标题
	// @inject_tag: db:"content" json:"content"
	optional string content = 7; //模板内容
	// @inject_tag: db:"params" json:"params"
	optional bytes params = 8; //参数数组
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 9; //开启状态
	// @inject_tag: db:"remark" json:"remark"
	optional string remark = 10; //备注
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 11; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 12; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 13; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 14; //更新时间
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 15; //是否删除
}
// SystemMailTemplateTotalResponse 列表数据总量
message SystemMailTemplateTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemMailTemplateCreateRequest 创建数据请求
message SystemMailTemplateCreateRequest {
	SystemMailTemplateObject data = 1;
}
// SystemMailTemplateCreateResponse 创建数据响应
message SystemMailTemplateCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemMailTemplateUpdateRequest 更新数据请求
message SystemMailTemplateUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
	SystemMailTemplateObject data = 2;
}
// SystemMailTemplateUpdateResponse 更新数据响应
message SystemMailTemplateUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemMailTemplateDeleteRequest 删除数据请求
message SystemMailTemplateDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// SystemMailTemplateDeleteResponse 删除数据响应
message SystemMailTemplateDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemMailTemplateRequest 查询单条数据请求
message SystemMailTemplateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// SystemMailTemplateResponse 查询单条数据响应
message SystemMailTemplateResponse {
	int64 code = 1;
	string msg = 2;
	SystemMailTemplateObject data = 3;
}
// SystemMailTemplateRecoverRequest 恢复数据请求
message SystemMailTemplateRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// SystemMailTemplateRecoverResponse 删除数据响应
message SystemMailTemplateRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemMailTemplateListRequest 列表数据
message SystemMailTemplateListRequest {
	
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 1; // 是否删除
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 开启状态
	// @inject_tag: db:"title" json:"title"
	optional string title = 3; // 模板标题
	// @inject_tag: db:"name" json:"name"
	optional string name = 4; // 模板名称
	// @inject_tag: db:"code" json:"code"
	optional string code = 5; // 模板编码
	// @inject_tag: db:"account_id" json:"accountId"
	optional int64 account_id = 6; // 发送的邮箱账号编号

	// @inject_tag: db:"page_num" json:"pageNum"
	optional int64 page_num = 7;
	// @inject_tag: db:"page_size" json:"pageSize"
	optional int64 page_size = 8;
}

// SystemMailTemplateListResponse 数据响应
message SystemMailTemplateListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemMailTemplateObject data = 3;
}
// SystemMailTemplateListTotalRequest 列表数据
message SystemMailTemplateListTotalRequest {
	
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 1; // 是否删除
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 开启状态
	// @inject_tag: db:"title" json:"title"
	optional string title = 3; // 模板标题
	// @inject_tag: db:"name" json:"name"
	optional string name = 4; // 模板名称
	// @inject_tag: db:"code" json:"code"
	optional string code = 5; // 模板编码
	// @inject_tag: db:"account_id" json:"accountId"
	optional int64 account_id = 6; // 发送的邮箱账号编号

}


// SystemMailTemplateService 服务
service SystemMailTemplateService{
	rpc SystemMailTemplateCreate(SystemMailTemplateCreateRequest) returns (SystemMailTemplateCreateResponse);
	rpc SystemMailTemplateUpdate(SystemMailTemplateUpdateRequest) returns (SystemMailTemplateUpdateResponse);
	rpc SystemMailTemplateDelete(SystemMailTemplateDeleteRequest) returns (SystemMailTemplateDeleteResponse);
	rpc SystemMailTemplate(SystemMailTemplateRequest) returns (SystemMailTemplateResponse);
	rpc SystemMailTemplateRecover(SystemMailTemplateRecoverRequest) returns (SystemMailTemplateRecoverResponse);
	rpc SystemMailTemplateList(SystemMailTemplateListRequest) returns (SystemMailTemplateListResponse);
	rpc SystemMailTemplateListTotal(SystemMailTemplateListTotalRequest) returns (SystemMailTemplateTotalResponse);
}
